# meridian

./: .dockerignore  .env.devnet.example  .env.example  .gitignore  .mcp.json  AGENTS.md  Anchor.toml  Cargo.toml  DEPLOYMENT_PLAN.md  Dockerfile  RADIX_UI_RECOMMENDATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.md  research-codex.md  research-rubric.md  tsconfig.base.json
.beads/: config.yaml  issues.jsonl  metadata.json  redirect
.reservations/: README.md  agent-3dw.json  codex-phoenix.json  yaboy.json
app/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
automation/: Dockerfile  package.json  tsconfig.json
docs/: DEMO_PROCEDURE.md  RISKS.md  TEST_PLAN.md  integration-test-performance-report.md
keys/: demo-wallet-2.json  meridian-program.json
migrations/: deploy.ts
programs/meridian/: Cargo.toml
programs/meridian/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/meridian/src/account_types/: market.rs  mod.rs  token_accounts.rs
programs/meridian/src/accounts/: config.rs  market.rs  mod.rs  token_accounts.rs
programs/meridian/src/instructions/: add_strike.rs  close_market.rs  config.rs  market.rs  merge_pair.rs  mint_pair.rs  mod.rs  pause.rs  redeem.rs  settle.rs  trade_yes.rs
programs/meridian/src/oracle/: pyth.rs
programs/meridian/src/phoenix/: mod.rs
programs/meridian/src/state/: config.rs  market.rs  mod.rs  oracle.rs  tests.rs  types.rs
programs/meridian/src/state/tests/: config_tests.rs  invariant_tests.rs  market_tests.rs  mod.rs  oracle_tests.rs  redemption_tests.rs  settlement_tests.rs  trading_tests.rs
scripts/: demo.ts  (+8 more)
(+157 files in other folders)
