[package]
name = "meridian"
version = "0.1.0"
description = "Meridian Anchor program scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

