[package]
name = "meridian"
version = "0.1.0"
description = "Meridian Anchor program scaffold"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meridian"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
] }

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token"] }
pyth-solana-receiver-sdk = "1.1.0"

